--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Outfit:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,10 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Outfit", sans-serif;
 }
 
 .container {
