--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
   font-family: "Outfit", sans-serif;
 }
 
+svg,
+button {
+  vertical-align: middle;
+}
+
 .container {
   max-width: 1536px;
   margin-left: auto;
