--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,10 @@
 header {
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
   padding: 1rem 2rem;
+  border-bottom: 1px solid black;
 }
 
 .header-btn {
